--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "eslint": "3.3.1",
     "eslint-config-silvermine": "0.9.3",
+    "eslint-plugin-silvermine": "0.9.0",
     "expect.js": "0.3.1",
     "grunt": "1.0.1",
     "grunt-eslint": "19.0.0",
