--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
+    "aws-sdk": "2.5.4",
     "coveralls": "2.11.12",
     "eslint": "3.3.1",
     "eslint-config-silvermine": "0.9.3",
