Update eslint rules and fix Travis CI
Previously we had to depend on the eslint plugins specifically instead
of relying on the eslint config's dependency on the plugins. This was
only because Travis CI is using an older (2.x) version of npm by
default. Changing our Travis config to upgrade npm fixes this bad
dependency situation and allows us to only rely on the eslint config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "5"
   - "4.3.2"
 
+before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+
 # For code coverage:
 after_success:
    cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
