--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/silvermine/dynamodb-capacity-manager#readme",
   "dependencies": {
     "class.extend": "0.9.2",
+    "minimatch": "3.0.3",
     "moment": "2.14.1",
     "q": "1.4.1",
     "regression": "1.2.1",
