--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
-# 4.3.2 is what AWS Lambda currently uses
 node_js:
-  - "5"
-  - "4.3.2"
+   - "8"
+   - "7"
+   - "6.10"
 
-before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+before_install:
+   - npm i -g npm@5.7.1
 
 # For code coverage:
 after_success:
