--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
+   - "node" # Latest node version
+   - "lts/*" # Latest LTS version
+   - "10"
+   - "8"
    - "8.10"
-   - "7"
-   - "6.10"
+   - "6"
 
-before_install:
-   - npm i -g npm@6.4.1
+before_install: if [[ `npm -v` != 6* ]]; then npm i -g npm@6.4.1; fi
 
 # For code coverage:
 after_success:
