--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "url": "https://github.com/silvermine/dynamodb-capacity-manager/issues"
   },
   "homepage": "https://github.com/silvermine/dynamodb-capacity-manager#readme",
+  "engines": {
+    "node": ">=8.10.0",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "class.extend": "0.9.2",
     "minimatch": "3.0.4",
