--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Library for monitoring throughput on DynamoDB tables and adjusting it for you based on real-time usage. Can be run as a Lambda function.",
   "main": "src/index.js",
   "scripts": {
-    "test": "grunt standards && ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec 'src/tests/**/*.test.js'"
+    "test": "check-node-version --npm 6.13.4 && grunt standards && ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec 'src/tests/**/*.test.js'"
   },
   "author": "Jeremy Thomerson",
   "license": "MIT",
@@ -22,10 +22,6 @@
     "url": "https://github.com/silvermine/dynamodb-capacity-manager/issues"
   },
   "homepage": "https://github.com/silvermine/dynamodb-capacity-manager#readme",
-  "engines": {
-    "node": ">=8.10.0",
-    "npm": "6.4.1"
-  },
   "dependencies": {
     "class.extend": "0.9.2",
     "minimatch": "3.0.4",
@@ -37,6 +33,7 @@
   "devDependencies": {
     "@silvermine/eslint-config": "1.5.0",
     "aws-sdk": "2.354.0",
+    "check-node-version": "4.0.3",
     "coveralls": "3.0.2",
     "eslint": "3.16.1",
     "expect.js": "0.3.1",
