--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "@silvermine/eslint-config": "1.5.0",
+    "@silvermine/eslint-config": "3.0.0-rc.0",
     "aws-sdk": "2.354.0",
     "check-node-version": "4.0.3",
     "coveralls": "3.0.2",
-    "eslint": "3.16.1",
+    "eslint": "6.8.0",
     "expect.js": "0.3.1",
     "grunt": "1.0.3",
-    "grunt-eslint": "19.0.0",
+    "grunt-eslint": "22.0.0",
     "istanbul": "0.4.5",
     "js-yaml": "3.8.4",
     "mocha": "5.2.0",
