--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,13 @@ node_js:
 
 before_install: npm i -g npm@6.13.4
 
+script:
+   - node --version
+   - npm --version
+   - grunt standards
+   - commitlint-travis
+   - npm test
+
 # For code coverage:
 after_success:
    cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
