--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install: npm i -g npm@8.5.5
 script:
    - node --version
    - npm --version
-   - grunt standards
+   - npm run standards
    - commitlint-travis
    - npm test
 
