--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "commitlint": "commitlint --from e1f08dc",
-    "test": "check-node-version --npm 10.5.0 && ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec 'src/tests/**/*.test.js'",
+    "check-node-version": "check-node-version --npm 10.5.0",
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec 'src/tests/**/*.test.js'",
     "markdownlint": "markdownlint -c .markdownlint.json '{,!(node_modules)/**/}*.md'",
     "eslint": "eslint .",
     "standards": "npm run markdownlint && npm run eslint"
